fix: overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -216,10 +216,6 @@ body {
   transform: rotate(45deg);
 }
 
-.burger__active {
-  overflow: hidden;
-}
-
 .about {
   padding-bottom: 11%;
 
